force-app/main/default/objects/Controlled_Drug__c/Controlled_Drug__c.object-meta.xml
<CustomObject>
    <label>Controlled Drug</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Controlled Drug #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Controlled Drugs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>