force-app/main/default/objects/Controlled_Drug__c/fields/Controlled_Drug__c.field-meta.xml
<CustomField>
    <fullName>Controlled_Drug__c</fullName>
    <label>Controlled Drug</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Medication_Drug__c.Expired_Drug__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Medication_Drug__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Controlled Drug</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Medication_Drug__c</referenceTo>
    <relationshipName>Drug_Administrations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>