force-app/main/default/objects/Controlled_Drug__c/fields/Date_Administered__c.field-meta.xml
<CustomField>
    <fullName>Date_Administered__c</fullName>
    <label>Date Administered</label>
    <required>true</required>
    <type>Date</type>
</CustomField>