force-app/main/default/objects/Controlled_Drug__c/fields/Dispensed_By__c.field-meta.xml
<CustomField>
    <fullName>Dispensed_By__c</fullName>
    <label>Dispensed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>