force-app/main/default/objects/Controlled_Drug__c/fields/Drug_Amount__c.field-meta.xml
<CustomField>
    <fullName>Drug_Amount__c</fullName>
    <label>Drug Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>