force-app/main/default/objects/Controlled_Drug__c/fields/Drug_Amount_Unit__c.field-meta.xml
<CustomField>
    <fullName>Drug_Amount_Unit__c</fullName>
    <label>Drug Amount Unit</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Drug_Amount_Unit</valueSetName>
    </valueSet>
</CustomField>