force-app/main/default/objects/Controlled_Drug__c/fields/Editor__c.field-meta.xml
<CustomField>
    <fullName>Editor__c</fullName>
    <label>Editor</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>