force-app/main/default/objects/Controlled_Drug__c/fields/Ordered_By__c.field-meta.xml
<CustomField>
    <fullName>Ordered_By__c</fullName>
    <label>Ordered By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>