force-app/main/default/objects/Controlled_Drug__c/fields/Species__c.field-meta.xml
<CustomField>
    <fullName>Species__c</fullName>
    <formula>TEXT(Animal__r.Type_of_Animal__c)</formula>
    <label>Species</label>
    <type>Text</type>
</CustomField>